src/objects/Approver__c/Approver__c.object-meta.xml
<CustomObject>
    <label>SEA Approval Matrix</label>
    <nameField>
        <label>Approver ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEA Approval Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>