src/objects/Approver__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id,  Approvers_Reference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver</label>
    <type>Text</type>
</CustomField>