src/objects/Approver__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SEA_Approval_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>