src/objects/Approver__c/fields/Approver_type__c.field-meta.xml
<CustomField>
    <fullName>Approver_type__c</fullName>
    <label>Approver type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Approver</fullName>
            </value>
            <value>
                <fullName>Contract Approver</fullName>
            </value>
            <value>
                <fullName>Finance Approver</fullName>
            </value>
            <value>
                <fullName>Product Approver</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Additional Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>