src/objects/Approver__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Defense &amp; Space</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>HTSI</fullName>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>EMEAI OEM CBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>