src/objects/Approver__c/fields/Delegate_Email__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Email__c</fullName>
    <label>Delegate Email</label>
    <type>Email</type>
</CustomField>