src/objects/Approver__c/fields/Delegate_Name_Text2__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Name_Text2__c</fullName>
    <label>Delegate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>