src/objects/Approver__c/fields/Delegation_Valid_From3__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Valid_From3__c</fullName>
    <label>Delegation Valid From</label>
    <type>Date</type>
</CustomField>