src/objects/Approver__c/fields/Delegation_Valid_To3__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Valid_To3__c</fullName>
    <label>Delegation Valid To</label>
    <type>Date</type>
</CustomField>