src/objects/Approver__c/fields/Email_Delegate_4__c.field-meta.xml
<CustomField>
    <fullName>Email_Delegate_4__c</fullName>
    <formula>If(  Delegate_Name_Text4__c  != &apos;&apos;,  Delegate_Name_Text4__c+&apos; : &apos; + Text( Delegation_Valid_From4__c ) +&apos; - &apos;+ Text( Delegation_Valid_To4__c ) , &apos;&apos;)</formula>
    <label>Email -  Delegate 4</label>
    <type>Text</type>
</CustomField>