src/objects/Approver__c/fields/Email_from_user__c.field-meta.xml
<CustomField>
    <fullName>Email_from_user__c</fullName>
    <formula>Approver_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail</label>
    <type>Text</type>
</CustomField>