src/objects/Approver__c/fields/Exposed_cost__c.field-meta.xml
<CustomField>
    <fullName>Exposed_cost__c</fullName>
    <label>Exposed cost (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>