src/objects/Approver__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>Delegation Valid From</label>
    <type>Date</type>
</CustomField>