src/objects/Approver__c/fields/Out_of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Delegate will not be assigned if this checkbox is unchecked</inlineHelpText>
    <label>Activate Delegation</label>
    <type>Checkbox</type>
</CustomField>