src/objects/Approver__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product LIne</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BendixKing Other - PL</fullName>
            </value>
            <value>
                <fullName>BK-Flight Controls - PL</fullName>
            </value>
            <value>
                <fullName>BK-Integrated Systems - PL</fullName>
            </value>
            <value>
                <fullName>BK-Nav &amp; Com Products - PL</fullName>
            </value>
            <value>
                <fullName>BK-Network &amp; Connectivity - PL</fullName>
            </value>
            <value>
                <fullName>BK-Safety Systems - PL</fullName>
            </value>
            <value>
                <fullName>AIMS/ VIA - PL</fullName>
            </value>
            <value>
                <fullName>Displays - PL</fullName>
            </value>
            <value>
                <fullName>Flight Controls - PL</fullName>
            </value>
            <value>
                <fullName>FMS - PL</fullName>
            </value>
            <value>
                <fullName>EGPWS - PL</fullName>
            </value>
            <value>
                <fullName>INAV - PL</fullName>
            </value>
            <value>
                <fullName>Onboard Maintenance Systems - PL</fullName>
            </value>
            <value>
                <fullName>SVS - PL</fullName>
            </value>
            <value>
                <fullName>Cloud Connected Avionics - PL</fullName>
            </value>
            <value>
                <fullName>EPIC - PL</fullName>
            </value>
            <value>
                <fullName>P1K, P2K, SPZ - PL</fullName>
            </value>
            <value>
                <fullName>Military Integrated Avionics - PL</fullName>
            </value>
            <value>
                <fullName>Cockpit Systems Other - PL</fullName>
            </value>
            <value>
                <fullName>Electronic Solutions Other - PL</fullName>
            </value>
            <value>
                <fullName>Commercial Air Data Systems - PL</fullName>
            </value>
            <value>
                <fullName>Commercial Navigation Systems - PL</fullName>
            </value>
            <value>
                <fullName>Defense Air Data Systems - PL</fullName>
            </value>
            <value>
                <fullName>Defense Aircraft Navigation Systems - PL</fullName>
            </value>
            <value>
                <fullName>GBAS - PL</fullName>
            </value>
            <value>
                <fullName>Thermal Switches - PL</fullName>
            </value>
            <value>
                <fullName>Commercial UAVs - PL</fullName>
            </value>
            <value>
                <fullName>Industrial IMUs - PL</fullName>
            </value>
            <value>
                <fullName>LIDAR - PL</fullName>
            </value>
            <value>
                <fullName>Navigation and Sensors Other - PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>