src/objects/Approver__c/fields/Product_SBU__c.field-meta.xml
<CustomField>
    <fullName>Product_SBU__c</fullName>
    <label>Product SBU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Solutions</fullName>
            </value>
            <value>
                <fullName>Engines &amp; Power Systems</fullName>
            </value>
            <value>
                <fullName>Mechanical Systems &amp; Components</fullName>
            </value>
            <value>
                <fullName>Other Aero</fullName>
            </value>
            <value>
                <fullName>Services &amp; Connectivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>