src/objects/Approver__c/fields/Sales_K__c.field-meta.xml
<CustomField>
    <fullName>Sales_K__c</fullName>
    <label>Sales (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>