src/objects/Approver__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0</fullName>
            </value>
            <value>
                <fullName>Tier I</fullName>
            </value>
            <value>
                <fullName>Tier II</fullName>
            </value>
            <value>
                <fullName>Tier III</fullName>
            </value>
            <value>
                <fullName>Tier IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>