src/objects/Approver__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>Delegation Valid To</label>
    <type>Date</type>
</CustomField>