src/objects/Approver__c/validationRules/Prevent_creation_by_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_creation_by_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISNEW(), CONTAINS($Profile.Name, &quot;Approver&quot;), NOT(CONTAINS($Profile.Name, &quot;Admin&quot;)))</errorConditionFormula>
    <errorMessage>Approvers cannot create new records, please contact Admin approvers</errorMessage>
</ValidationRule>