src/objects/Approver__c/listViews/Airlines.listView-meta.xml
<ListView>
    <fullName>Airlines</fullName>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Tier__c</columns>
    <columns>Approver_type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Out_of_Office__c</columns>
    <columns>Delegate_Name__c</columns>
    <columns>Delegate_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Airlines</value>
    </filters>
    <label>Airlines</label>
</ListView>