src/objects/Approver__c/listViews/All_Active_Approvers.listView-meta.xml
<ListView>
    <fullName>All_Active_Approvers</fullName>
    <columns>Sort__c</columns>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Tier__c</columns>
    <columns>Terms_and_Conditions__c</columns>
    <columns>Email__c</columns>
    <columns>Out_of_Office__c</columns>
    <columns>Delegate_Name__c</columns>
    <columns>Delegate_Email__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Approvers</label>
</ListView>