src/objects/Approver__c/listViews/Harland_Hirtzel.listView-meta.xml
<ListView>
    <fullName>Harland_Hirtzel</fullName>
    <columns>Sort__c</columns>
    <columns>Manual_Override_Level__c</columns>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Approver_type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Tier__c</columns>
    <columns>Terms_and_Conditions__c</columns>
    <columns>Email__c</columns>
    <columns>Out_of_Office__c</columns>
    <columns>Delegate_Name__c</columns>
    <columns>Delegate_Email__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver_Name__c</field>
        <operation>contains</operation>
        <value>Unger</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Defense &amp; Space</value>
    </filters>
    <label>Harland Hirtzel</label>
</ListView>