src/objects/Approver__c/listViews/Thomas_Davis.listView-meta.xml
<ListView>
    <fullName>Thomas_Davis</fullName>
    <columns>Manual_Override_Level__c</columns>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Tier__c</columns>
    <columns>Terms_and_Conditions__c</columns>
    <columns>Email__c</columns>
    <columns>Out_of_Office__c</columns>
    <columns>Delegate_Name__c</columns>
    <columns>Delegate_Email__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver_Name__c</field>
        <operation>equals</operation>
        <value>Thomas Davis</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Thomas Davis</label>
</ListView>