src/objects/Approver__c/listViews/Tier_0_IV_Approvers1.listView-meta.xml
<ListView>
    <fullName>Tier_0_IV_Approvers1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Product_SBU__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Tier__c</columns>
    <columns>Manual_Override_Level__c</columns>
    <columns>Approver_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier__c</field>
        <operation>equals</operation>
        <value>Tier 0,Tier I,Tier II,Tier III,Tier IV</value>
    </filters>
    <label>Tier 0-IV Approvers</label>
</ListView>