src/objects/Approver__c/listViews/User_Specific.listView-meta.xml
<ListView>
    <fullName>User_Specific</fullName>
    <columns>Sort__c</columns>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Tier__c</columns>
    <columns>Terms_and_Conditions__c</columns>
    <columns>Email__c</columns>
    <columns>Out_of_Office__c</columns>
    <columns>Delegate_Name__c</columns>
    <columns>Delegate_Email__c</columns>
    <columns>Title__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email__c</field>
        <operation>equals</operation>
        <value>JC.Foster@Honeywell.com</value>
    </filters>
    <label>User Specific</label>
    <language>en_US</language>
</ListView>